<resources>
    <string name="app_name">Smart Places Owners App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_message">First, you need to login in order to use the app</string>
    <string name="loading">Loading</string>
    <string name="title_activity_user"></string>
    <string name="action_smart_places">Smart Places</string>
    <string name="action_instances">My Instances</string>
    <string name="name">Name</string>
    <string name="short_description">Short description</string>
    <string name="smart_places_list_empty">There are no Smart Places available yet</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="create_instance">Create Instance</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="smart_place_instances_list_empty">You do not have created smart place instances yet</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="delete_smart_place_instance_confirmation">Delete this Smart Place Instance?</string>
    <string name="smart_place">Smart Place:</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_show_smart_place">Smart Place</string>
    <string name="title_activity_update_smart_place_instance">Smart Place Instance</string>
    <string name="title_activity_show_smart_place_instance">Smart Place Instance</string>
    <string name="update_smart_place_instance">Update Smart Place Instance</string>
    <string name="smart_place_instance_saved">Smart Place Instance saved successfully</string>
    <string name="title_activity_tag_smart_place_instance">TagSmartPlaceInstanceActivity</string>
    <string name="beacons_scanned">Beacons scanned</string>
    <string name="no_beacons_found">No Beacons have been found</string>
</resources>
