<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.sam.ownersapp.ui.ShowSmartPlaceActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/show_smartplace_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Toolbar">

        <TextView
            android:id="@+id/show_smart_place_name_textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_smartplace_toolbar">

        <TextView
            android:id="@+id/show_smart_place_description_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/description" />

        <Button
            android:id="@+id/show_smart_place_create_instance_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/create_instance" />
    </RelativeLayout>
</RelativeLayout>
