<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.sam.ownersapp.ui.ShowSmartPlaceInstanceActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/show_smart_place_instance_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/show_smart_place_instance_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:id="@+id/show_smart_place_instance_edit_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_mode_edit_white_18dp" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/show_smart_place_instance_toolbar">

        <TextView
            android:id="@+id/show_smart_place_instance_message_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <Button
            android:id="@+id/show_smart_place_instance_delete_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/deleteBackground"
            android:text="@string/delete"
            android:theme="@style/deleteButton" />
    </RelativeLayout>
</RelativeLayout>
