<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sam.ownersapp.ui.UpdateSmartPlaceInstanceActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/update_smartplace_instance_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Toolbar">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/update_smartplace_instance_save_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/check" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_toRightOf="@+id/update_smartplace_instance_save_icon"
                android:text="@string/update_smart_place_instance"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_smartplace_instance_toolbar">

        <EditText
            android:id="@+id/update_smart_place_instance_title_editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:hint="@string/title" />

        <EditText
            android:id="@+id/update_smart_place_instance_message_editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/update_smart_place_instance_title_editText"
            android:ems="10"
            android:hint="@string/message"
            android:inputType="textMultiLine" />

    </RelativeLayout>
</RelativeLayout>
